<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
    />

    <ImageView
            android:layout_width="292dp"
            android:layout_height="292dp"
            android:src="@drawable/ellipse_1a"
            android:rotation="-149"
            android:layout_marginTop="132dp"
            android:layout_marginRight="-100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

    <ImageView
            android:layout_width="201dp"
            android:layout_height="201dp"
            android:src="@drawable/ellipse_2a"
            android:rotation="173"
            android:layout_marginBottom="160dp"
            android:layout_marginLeft="-60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>

    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ellipse_3a"
            android:rotation="173"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="-80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:id="@+id/loginText"
            android:layout_width="356dp"
            android:layout_height="40dp"
            android:layout_below="@id/logo"
            android:background="@drawable/login_field"
            android:paddingLeft="15dp"
            android:hint="Login"
            android:inputType="textPersonName"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
    />

    <EditText
            android:id="@+id/passwordText"
            android:layout_width="356dp"
            android:layout_height="40dp"
            android:layout_below="@id/loginText"
            android:background="@drawable/login_field"
            android:paddingLeft="15dp"
            android:hint="Hasło"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
    />

    <Button
            android:id="@+id/loginBtn"
            android:layout_width="356dp"
            android:layout_height="40dp"
            android:background="@drawable/button_field"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="true"
            android:text="Zaloguj się"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
    />

</RelativeLayout>